--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 
 before_install:
   # Install dep
-  - curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep
+  - - if [[ "${TRAVIS_CPU_ARCH}" == "ppc64le" ]]; then curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-ppc64le -o $GOPATH/bin/dep; else curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep; fi
   - chmod +x $GOPATH/bin/dep
 
   # Install golint
@@ -16,3 +16,5 @@ before_install:
 arch:
   - amd64
   - ppc64le
+
+
